--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     Feel free to connect with me on my social media platforms or check out my projects on GitHub!
   </p>
   <div class="social-links">
-    <a href="https://github.com/yourusername" target="_blank" title="GitHub">
+    <a href="https://github.com/RobbyDarmawann" target="_blank" title="GitHub">
       <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="icon">
     </a>
     <a href="https://www.instagram.com/yourusername" target="_blank" title="Instagram">
