--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <a href="https://github.com/RobbyDarmawann" target="_blank" title="GitHub">
       <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="icon">
     </a>
-    <a href="https://www.instagram.com/yourusername" target="_blank" title="Instagram">
+    <a href="https://www.instagram.com/robby_darmawan_" target="_blank" title="Instagram">
       <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" class="icon">
     </a>
     <a href="https://www.facebook.com/yourusername" target="_blank" title="Facebook">
