--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           />
         </a>
         <a
-          href="https://www.facebook.com/yourusername"
+          href="https://www.facebook.com/share/1DQ1K7J9oM"
           target="_blank"
           title="Facebook"
         >
