--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="logo">MyBrand</div>
       <nav>
         <ul>
-          <li><a href="#about">About</a></li>
+          <li><a href="#about">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Contact Me</a></li>
         </ul>
       </nav>
     </header>
