--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <strong>SQL</strong>. I enjoy solving problems and building software
         solutions that make a difference.
       </p>
+      <a href="link-ke-cv-anda.pdf" download class="download-btn"
+        >Download CV</a
+      >
       <div class="social-links">
         <a
           href="https://github.com/RobbyDarmawann"
@@ -102,7 +105,7 @@
         <button type="submit">Send</button>
       </form>
     </section>
-    
+
     <script src="main.js"></script>
   </body>
 </html>
