--- a/index.html
+++ b/index.html
@@ -105,7 +105,58 @@
         <button type="submit">Send</button>
       </form>
     </section>
-
+    <footer>
+      <div class="footer-content">
+        <p>&copy; 2024 Robby Darmawan. All rights reserved.</p>
+        <div class="social-links-footer">
+          <a
+            href="https://github.com/RobbyDarmawann"
+            target="_blank"
+            title="GitHub"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+              alt="GitHub"
+              class="icon"
+            />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/robby-darmawan/"
+            target="_blank"
+            title="LinkedIn"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+              alt="LinkedIn"
+              class="icon"
+            />
+          </a>
+          <a
+            href="https://www.instagram.com/robby_darmawan_"
+            target="_blank"
+            title="Instagram"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/733/733558.png"
+              alt="Instagram"
+              class="icon"
+            />
+          </a>
+          <a
+            href="https://wa.me/1234567890"
+            target="_blank"
+            title="WhatsApp"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/733/733585.png"
+              alt="WhatsApp"
+              class="icon"
+            />
+          </a>
+        </div>
+      </div>
+    </footer>
+    
     <script src="main.js"></script>
   </body>
 </html>
